# OpenGL_Playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate.bat
2_HelloTriangle/: CMakeLists.txt  main.cpp
3_HelloSdl/: CMakeLists.txt  main.cpp
4_UniformVars/: CMakeLists.txt  main.cpp  shaders.h  util.h
5_HelloGlm/: CMakeLists.txt  main.cpp  shaders.h  util.h
CmakeTest/: CMakeLists.txt  CMakeProject1.cpp  TutorialConfig.h.in
Hello/: CMakeLists.txt  main.cpp
